# OpenList-Explorer

./: .editorconfig  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
data/: data.db
scripts/: check_encoding.cjs  check_encoding.cmd  check_modal_layout.cjs  check_modal_layout.cmd  check_multi_openlist_state.cmd  check_multi_openlist_state.py  check_openlist_upload_resume.cmd  check_openlist_upload_resume.py  check_responsive_layout.cmd  check_responsive_layout.py  e2e_openlist_smoke.cmd  e2e_openlist_smoke.py  p0_release_check.cmd  p0_release_check.py  prepare_aria2_bundle.cmd  prepare_aria2_bundle.py  prepare_tauri_build.cmd  prepare_tauri_build.py  publish_github.cmd  publish_github.ps1  publish_github.py  release.cjs  release.cmd
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/api/: auth.ts  fs.ts  http.ts
src/assets/: styles.css
src/components/: FileToolbar.vue  StorageSidebar.vue  TaskList.vue
src/database/: README.md  schema.ts
src/hooks/: useClipboard.ts
src/layouts/: AppLayout.vue
src/models/: file.ts  storage.ts  storageLogos.ts  task.ts
src/router/: index.ts
src/services/: builtinOpenList.ts  database.ts  localFile.ts  offlineTasks.ts  tokenVault.ts
src/stores/: favorites.ts  files.ts  history.ts  settings.ts  storage.ts  tasks.ts
src/utils/: format.ts  path.ts
src/views/: FileManagerView.vue  HomeView.vue  OpenListSettingsView.vue  SettingsView.vue  TasksView.vue
