[package]
name = "openlist-explorer"
version = "0.1.0"
description = "Unified storage resource manager for OpenList"
authors = ["OpenList Explorer"]
edition = "2021"
rust-version = "1.88"

[lib]
name = "openlist_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security_Credentials"] }
