[package]
name = "openlist-explorer"
version = "0.1.12"
description = "Unified storage resource manager for OpenList"
authors = ["OpenList Explorer"]
edition = "2021"
rust-version = "1.88"

[lib]
name = "openlist_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.4", features = ["multipart", "stream"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
tokio = { version = "1.52.3", features = ["fs", "io-util", "sync", "time"] }
bytes = "1.11.1"
futures-util = "0.3.32"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security_Credentials"] }
